--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,11 @@
     <string name="menu_home">Home</string>
     <string name="menu_calendar">Calendario</string>
     <string name="menu_export">Exportacion</string>
+    <string name="file_explorer">Explorador</string>
+
+    <!-- File Explorer   -->
+    <string name="no_files">Sin archivos encontrados</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
