--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,14 @@
     <string name="previous">Previous</string>
 
 
+    <string name="titulo">Titulo</string>
     <string name="descripcionTarea">Descripcion de la Tarea</string>
     <string name="fechaTarea">Fecha de la tarea</string>
     <string name="Descripcion">Descripción</string>
     <string name="Fecha">Fecha</string>
-    <string name="Guardar">GUARDAR</string>
+    <string name="Guardar">Guardar</string>
+    <string name="prioridad">Prioridad</string>
+    <string name="nota">Nota</string>
     <string name="title_activity_navigation_drawer">NavigationDrawer</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
